--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <footer>
         <div class="rankinghud">
-            <h2>Leaderboard</h2>
+            <h2>Leaderboard (Não está funcionando)</h2>
             <ul id="ranking-list">
                 <!-- As posições dos jogadores serão carregadas aqui -->
             </ul>
